hphp/test/slow/typed_locals/enforce_init.php.expectf
Catchable fatal error: Typed local assignment: Expected string, got int in %s/hphp/test/slow/typed_locals/enforce_init.php on line 6
